[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'xnode-runtime-wasm'
version = '1.0.0'

[lib]
crate-type = ['cdylib']
[dependencies.xnode-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['xnode-runtime/std']
[profile.release]
lto = true
panic = 'abort'

[workspace]
members = []
